--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header {
       top: 70px;
       right: 20px;
       background-color: white;
-      border: 1px solid #695aa6;
+      border: 1px solid navy;
       border-radius: 8px;
       padding: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -90,7 +90,7 @@ header {
   }
 
   .menu ul li a {
-      color: #695aa6;
+      color: navy;
   }
 
   .menu-toggle {
@@ -102,7 +102,7 @@ header {
   }
 
   .navBar.bgColor .menu-toggle .bar {
-      background-color: #695aa6;
+      background-color: navy;
   }
 }
 
@@ -118,11 +118,11 @@ header {
 .header-scrolled .name h1,
 .header-scrolled .menu ul li a,
 .header-scrolled .menu ul li {
-  color: #695aa6; /* Change name color when scrolled */
+  color: navy; /* Change name color when scrolled */
 }
 
 .header-scrolled .menu-toggle .bar {
-  background-color: #695aa6; /* Change toggle button color when header is scrolled */
+  background-color: navy; /* Change toggle button color when header is scrolled */
 }
 
 /* Navbar CSS ends here  */
@@ -183,12 +183,12 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to top, #fff 0%, rgba(105, 90, 166, 0.35) 99%, rgba(105, 90, 166, 0.5) 100%);
+  background-image: linear-gradient(to top, #fff 0%, rgba(0, 0, 128, 0.35) 99%, rgba(0, 0, 128, 0.5) 100%);
 }
 
 .hero-container .botton a{
   text-decoration: none;
-  color:#695aa6;
+  color:navy;
 }
 
 .hero-container .botton img{
@@ -297,7 +297,7 @@ header {
   padding: 6px 12px;
   margin-top: 24px;
   border-radius: 50px;
-  background: #695aa6;
+  background: navy;
   color: white;
   font-family: Patrick Hand, cursive;
   font-size: 17px;
@@ -305,8 +305,9 @@ header {
 
 .imgeffect img{
   width: 300px;
-  height: 400px;
+  height: 325px;
   border-radius: 10px;
+
 }
 
 @media (max-width: 768px) {
@@ -376,12 +377,12 @@ header {
   font-family: Leckerli One, sans-serif;
   font-weight: 600;
   margin-top: 20px;
-  color: black;
+  color: navy;
   margin-bottom: 25px;
 }
 
 .skillh1{
-  color: black;
+  color: navy;
 }
 
 .Skills .container .heading h1{
@@ -402,7 +403,7 @@ header {
   width: 100%;
   max-width: 500px;
   background: transparent;
-  border: 1px solid #695aa6;
+  border: 1px solid navy;
   border-radius: 16px;
   padding: 18px 36px;
 }
@@ -413,7 +414,7 @@ header {
   font-size: 20px;
   font-family: Patrick Hand, cursive;
   font-weight: 600;
-  color: black;
+  color: navy;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -430,8 +431,8 @@ header {
   font-size: 14px;
   font-weight: 400;
   font-family: Patrick Hand, cursive;
-  color: black;
-  border: 1px solid #695aa6;
+  color: navy;
+  border: 1px solid navy;
   border-radius: 12px;
   padding: 12px 16px;
   display: flex;
@@ -567,7 +568,7 @@ header {
 h1 {
   text-align: center;
   font-weight: 300;
-  color: black;
+  color: navy;
   font-family: 'Leckerli One', sans-serif;
 }
 
@@ -624,7 +625,7 @@ h1 span {
   height: 16px;
   border-radius: 50%;
   border: 2px solid #F5F7FA;
-  background: #695aa6;
+  background: navy;
   margin-top: 10px;
   z-index: 9999
 }
@@ -641,7 +642,7 @@ h1 span {
   margin-bottom: 5px;
   font-size: 25px;
   font-weight: 500;
-  color: #695aa6;
+  color: navy;
 }
 
 .timeline-content span {
@@ -721,7 +722,7 @@ h1 span {
 .card:nth-child(1) .box .icon .iconBox,
 .card:nth-child(2) .box .icon .iconBox,
 .card:nth-child(3) .box .icon .iconBox {
-  background: #695aa6;
+  background: navy;
 }
 
 .card ul {
@@ -736,7 +737,7 @@ h1 span {
 
 .card ul li {
   text-transform: uppercase;
-  background: #695aa6;
+  background: navy;
   color: #282828;
   font-weight: 700;
   font-family: 'Patrick Hand', cursive;
@@ -952,7 +953,7 @@ h1 span {
     margin: 5px;
     margin-right: 0;
     margin-bottom: 0;
-    border: 1px solid black;
+    border: 1px solid navy;
     border-radius: 5px;
     background: transparent;
     color: #212529;
@@ -991,7 +992,7 @@ body {
 .contact-info {
   flex: 1;
   padding: 40px;
-  background-color: #695aa6;
+  background-color: navy;
   color: white;
 }
 
@@ -1041,7 +1042,7 @@ body {
 
 .contact-form button {
   padding: 10px;
-  background-color: #695aa6;
+  background-color: navy;
   color: white;
   border: none;
   border-radius: 4px;
@@ -1049,7 +1050,7 @@ body {
 }
 
 .contact-form button:hover {
-  background-color: #543d8d;
+  background-color: black;
 }
 
 /* Responsive Styles */
